--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,9 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+    <img *ngIf="img" [src]="img" alt="">
+  <button ion-button small (click)="AbreCamera()">Camera</button>
 </ion-content>
+<ion-footer>
+  <button ion-button full (click)="Loggout">Sair</button>
+</ion-footer>
